k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digischool
  labels:
    app.kubernetes.io/part-of: digischool-emis
